# glPlayground

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md
cubeWithNormals/: CMakeLists.txt
cubeWithNormals/shaders/: basic.fshader  basic.vshader
cubeWithNormals/src/: application.cpp
triangle/: CMakeLists.txt  README.md
triangle/src/: application.cpp
triangleLegacy/: CMakeLists.txt
triangleModern/: CMakeLists.txt  README.md
triangleModern/shaders/: basic.fshader  basic.vshader
triangleModern/src/: OpenGlDebugLogger.cpp  OpenGlDebugLogger.h  Shader.cpp  ShaderProgram.cpp  ShaderProgram.h  VertexBuffer.h  application.cpp
utilities/: CMakeLists.txt
utilities/include/: FragmentShader.h  IndexBuffer.h  ObjModel.h  OpenGlDebugLogger.h  Shader.h  VertexShader.h
utilities/src/: FragmentShader.cpp  IndexBuffer.cpp  ObjModel.cpp  ShaderProgram.cpp  VertexBuffer.cpp  VertexShader.cpp
